# openat

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  openat.pc.in
.github/: FUNDING.yml
cmake/: FindGumboQuery.cmake  Findcurlpp.cmake
include/at/: coinmarketcap.hpp  exceptions.hpp  exchange.hpp  fiat.hpp  kraken.hpp  market.hpp  namespace.hpp  request.hpp  shapeshift.hpp  types.hpp
include/at/crypt/: namespace.hpp
libs/curlpp-0.8.1/src/curlpp/: Exception.cpp  OptionBase.cpp
libs/curlpp-0.8.1/src/curlpp/internal/: OptionSetter.cpp
libs/gumbo/parser/lib/: libgumbo.so.1.0.0
libs/gumbo/parser/tmp/: gumbo-cfgcmd.txt  gumbo_parser-cfgcmd.txt
misc/systemd/: openatd@.service
src/: CMakeLists.txt  README.md  main.cc
src/at/: coinmarketcap.cc  fiat.cc  kraken.cc  market.cc  request.cc  shapeshift.cc
src/at/crypt/: namespace.cc
tests/: CMakeLists.txt  main.cc  types_test.cc
